Possibly fix the crash when dropping low quality frames from animation cache

I couldn't reproduce the bug, so I'm not sure it actually
fixes the bug, but dereferencing end iterator sounds like a
possible reason.

BUG:395220